add hosted manifest redirect

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,12 @@
 {
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "https://api.farcaster.xyz/miniapps/hosted-manifest/019a9398-f6aa-a4a7-23bf-620de068bf53",
+      "permanent": false,
+      "statusCode": 307
+    }
+  ],
   "rewrites": [
     {
       "source": "/.well-known/(.*)",
@@ -6,14 +14,5 @@
     }
   ],
   "cleanUrls": true,
-  "trailingSlash": false,
-  "headers": [
-    {
-      "source": "/.well-known/farcaster.json",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" }
-      ]
-    }
-  ]
+  "trailingSlash": false
 }
