--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,9 @@
-
+{
+  "redirects": [
+    {
+      "source": "/.well-known/farcaster.json",
+      "destination": "https://api.farcaster.xyz/miniapps/hosted-manifest/019a939f-b29d-53a5-e3d8-418c06431e43",
+      "permanent": false
+    }
+  ]
+}
