--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "thirdweb": "^5.112.1"
+    "@farcaster/frame-sdk": "latest",
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
